--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,6 +1,18 @@
 body {
     text-align: center;
     color: royalblue;
-    font-size:  1.5rem;
+    font-size:  16px;
     font-family: "Arial";
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
