--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,6 +5,15 @@ body {
     font-family: "Arial";
 }
 
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em
+}
+
 #container {
     width: 70%;
     padding: 1em;
