--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     color: royalblue;
     font-size:  16px;
-    font-family: "Arial";
+    font-family: "Courier";
 }
 
 #container {
